--- a/passwords/templates/profile.html
+++ b/passwords/templates/profile.html
@@ -2,27 +2,15 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
     <div class="w-50 text-left mx-auto">
         <h1 class="mt-5 text-center">Edit your profile</h1>
-    <h2 class="mt-5 text-center">Update your profile</h2>
-    <form method="post" action="{% url 'update-user' %}">
-        {% csrf_token %}
-        {{ user_update_form| crispy }}
-        <div class="text-center">
-            <input type="submit" class="btn btn-warning">
-        </div>
-
-    </form>
     <h2 class="mt-3 text-center">Update your password</h2>
-    <form method="post" action="{% url 'update-user' %}">
+    <form method="POST" action="{% url 'update-user' %}">
         {% csrf_token %}
         {{ password_update_form|crispy }}
         <div class="text-center">
             <input type="submit" class="btn btn-warning text-center">
         </div>
-
     </form>
     </div>
-
 {% endblock %}
